# qtc-super

./: .gitignore  .gitmodules  .qmake.conf  CMakeLists.txt  README.md  qtc-super.pro  qtc-super.qbs  submodules.pri
